[package]
name = "s-macro"
version = "0.1.0"
authors = ["ethan"]
description = "A basic Rust library for conveniently making a String."
keywords = ["string", "sugar", "easy", "macro", "proc_macro"]
edition = "2018"
repository = "https://github.com/zemja/s-macro"
license = "Unlicense"

[lib]
proc-macro = true

[dependencies]
quote = "1"
proc-macro2 = "1.0"
syn = "1.0"
